Fixed height pane 2 rows: hover overflow debug

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -140,14 +140,14 @@ table#reportData tr.rowa td {
 .in_cell {
   max-height: 43px;
   overflow: hidden;
+  position: relative;
 }
 
 .in_cell:hover {
 	overflow:visible;
-}
-
-.cell_in {
-  background-color: white;
+	color: white;
+  text-shadow: 0px 0px 1em black,0px 0px 1em black,0px 0px 1em black,0px 0px 1em black,0px 0px 1em black,0px 0px 1em black;
+  z-index: 999;
 }
 
 table#reportData tr.rowb  { 
